# pizza-delivery-dash

./: .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py  utils.py
src/db/: manager.py  startup.sql
src/pizza_delivery_dash/: __init__.py  animated_sprite.py  app.py  app_pizza.py  base_sprite.py  buttons.py  cooking.py  cooking_classes.py  food_item.py  game.py  game_loop.py  level.py  main_menu.py  player.py  state.py  tile.py
src/pizza_delivery_dash/levels/: level1.txt
src/pizza_delivery_dash/scene/: scene.py  scene_confirmation.py  scene_gameover.py  scene_level.py  scene_mainmenu.py  scene_pizzeria.py  scene_shop.py  scene_stats.py
src/pizza_delivery_dash/sprite/: animated_sprite.py  base_sprite.py  player.py  tile.py
